5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3161/executions/1712_2503.log
== SUBMITION (2019-05-13 15:19:24) 
-- CODE:
c = 0
d = 1
e = 0
aux = 1

while(c < n):
	e = e + (aux * (4 / d))
	if(aux == 1)
	   aux = -1
	else:
		aux = 1
		
	c = c + 1 
	d = d + 2
	
print(round(e, 8))
-- EXECUTION TIME:
0.171675
-- ERROR:
  File "/home/codebench/codes/1712/2503/main.py", line 8
    if(aux == 1)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:19:45) 
-- CODE:
c = 0
d = 1
e = 0
aux = 1

while(c < n):
	e = e + (aux * (4 / d))
	if(aux == 1):
	   aux = -1
	else:
		aux = 1
		
	c = c + 1 
	d = d + 2
	
print(round(e, 8))
-- EXECUTION TIME:
0.165208
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2503/main.py", line 6, in <module>
    while(c < n):
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:19:58) 
-- CODE:
c = 0
d = 1
e = 0
aux = 1

while(c < n):
	e = e + (aux * (4 / d))
	if(aux == 1):
	   aux = -1
	else:
		aux = 1
		
	c = c + 1 
	d = d + 2
	
print(round(e, 8))
-- EXECUTION TIME:
0.122456
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2503/main.py", line 6, in <module>
    while(c < n):
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:20:56) 
-- CODE:
n = int(input())

c = 0
d = 1
e = 0
aux = 1

while(c < n):
	e = e + (aux * (4 / d))
	if(aux == 1):
	   aux = -1
	else:
		aux = 1
		
	c = c + 1 
	d = d + 2
	
print(round(e, 8))
-- EXECUTION TIME:
0.134179
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
3.13423981
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
3.09616153
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
3.20818565
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
